now uses ecobits to keep track of currency! (im to lazy to write a proper msg)